--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.6"
+    "eslint": "^8.45.0",
+    "eslint-config-react-app": "^7.0.1",
+    "vite": "^4.4.6",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
