--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "array-move": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
+    "vite-plugin-svgr": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "react-scripts test"
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -40,10 +42,24 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-jest": "^27.4.2",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.45.0",
     "eslint-config-react-app": "^7.0.1",
+    "jest": "^27.4.3",
+    "jest-environment-jsdom": "^27.5.1",
+    "jest-resolve": "^27.4.2",
+    "jest-watch-typeahead": "^1.0.0",
+    "react-app-polyfill": "^3.0.0",
     "vite": "^4.4.6",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
