--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "array-move": "^4.0.0",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
@@ -21,7 +22,7 @@
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "jest"
+    "test": "env-cmd -f .env.test jest"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +60,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "react-app-polyfill": "^3.0.0",
     "vite": "^4.4.6",
+    "vite-plugin-environment": "^1.1.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.0"
   }
